cmake_minimum_required(VERSION 3.0)
project(app)
aux_source_directory(./ SRC)
include_directories(${HEAD_PATH})
link_directories(${LIB_PATH})

link_libraries(${PUBLIC_LIB})
link_libraries(${PROC_LIB})
link_libraries(${NET_LIB})
link_libraries(${SIGNAL_LIB})
link_libraries(${SERVICE_LIB})
link_libraries(${MISC_LIB})
link_libraries(pthread rt)
set(EXECUTABLE_OUTPUT_PATH ${EXEC_PATH})
add_executable(${APP_NAME} ${SRC})
